G1: Remset for young regions are cleared too early during Full GC

XMLWordPrintable

    • gc
    • b12

      JDK-8364649 moved clearing of the remsets for the young regions to the start of the full collection. However, this occurs too early, as subsequent heap verification phases rely on the content of the remsets for young regions. As a result, G1HeapVerifier (specifically in G1FullCollector::verify_after_marking) fails due to missing remset details during verification.

            Assignee:
            Ivan Walulya
            Reporter:
            Ivan Walulya
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: