8365780: G1: Remset for young regions are cleared too early during Full GC

Reviewed-by: sjohanss, ayang